--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "Conduit content discovery registry: centralized index standing in
 
 [dependencies]
 axum = "0.8"
+chrono = "0.4"
 clap = { version = "4", features = ["derive"] }
 rusqlite = "0.31"
 serde = { version = "1", features = ["derive"] }
